--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "express": "~3.2.6",
     "socket.io": "~0.9.16",
-    "portfinder": "~0.2.1"
+    "portfinder": "~0.2.1",
+    "ws": "~0.4.25",
+    "grunt": "~0.4.1",
+    "debug": "~0.7.2"
   }
 }
